--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div>
             <section class="image">
                 <img class="ali" src="./image/ali.jpg" alt="">
-                <img class="ali" src="/image/ama.jpg" alt="">
+                <img class="ali" src="./image/ama.jpg" alt="">
                 <img class="ali" src="./image/daraj.jpg" alt="">
                 <img class="ali" src="./image/ebay.jpg" alt="">
                 <img class="ali" src="./image/rak.jpg" alt="">
