--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                         <li class="li">products</li>
                         <li class="li">Sign up</li>
                         <li class="li">log in</li>
+                        <li>
+                            <img src="./image/search.jpg" alt="">
+                        </li>
                     </ul>
                 </section>
             </div>
@@ -44,6 +47,117 @@
                 <img class="ali" src="./image/rak.jpg" alt="">
                 <img class="ali" src="./image/target.jpg" alt="">
                 <img class="ali" src="./image/wal.jpg" alt="">
+            </section>
+        </div>
+                               <!-- products -->
+        <div class="product-container">
+            <h4 class="product-heading">Popoular collection</h4>
+            <section class="all-product">
+                                <!-- 1st card -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/drone.jpg" alt="">
+                    <p class="name">Drone</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+                <!-- 2nd -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/camara3.jpg" alt="">
+                    <p class="name">Camera</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+                <!-- 3rd -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/blacklight.jpg" alt="">
+                    <p class="name"> Light Set</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+                <!-- 4th -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/camera2.jpg" alt="">
+                    <p class="name">FlexTripod</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+                <!-- 5th -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/light.jpg" alt="">
+                    <p class="name">Light Setup</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+                <!-- 6th -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/microphone.jpg" alt="">
+                    <p class="name">Microphone</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+                <!-- 7th -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/tws.jpg" alt="">
+                    <p class="name">Airbuds</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+                <!-- 8th -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/whitelight.jpg" alt="">
+                    <p class="name">Photoshoot Set</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+                <!-- 9th -->
+                <div class="product-card">
+                    <img height="270px" width="250px" src="./image/hand.jpg" alt="">
+                    <p class="name">Go Pro</p>
+                    <p class="price">$1200.00</p>
+                    <p class="rating">rating:4.8</p>
+                    <p class="details">Wordwide shifting <br>
+                        available <br>
+                        Buyers protection possible</p>
+                </div>
+            </section>
+        <section class="right">
+            <button class="next-button">See More 
+                <img src="./image/arrow-forward 1.jpg" alt="">
+            </button>
+        </section>           
+        </div>
+        <div class="last-div">
+            <section>
+                <img style="height: 210px; width: 350px;border-radius: 10px;" src="./image/table.jpg" alt="">
+            </section>
+            <section class="last-section">
+                <h1 class="featured">Featured product at one place</h1>
+                <p class="last-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Consectetur saepe repellat, impedit totam laboriosam id! Cum hic recusandae nisi <br> repudiandae eaque facere quo, excepturi similique!</p>
+                <button class="last-button">Join Now</button>
             </section>
         </div>
     </main>
